--- a/package.json
+++ b/package.json
@@ -5,13 +5,27 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "next": "13.5.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "@tanstack/react-query": "^5.81.5",
     "ethers": "^6.8.0",
-    "@base-org/miniapp": "git+https://github.com/base-org/miniapp.git"
+    "@farcaster/miniapp-sdk": "^0.1.8",
+    "wagmi": "^2.16.3",
+    "viem": "^2.31.6",
+    "@coinbase/onchainkit": "latest"
+  },
+  "devDependencies": {
+    "typescript": "^5.2.2",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "@types/node": "^20",
+    "eslint": "^9",
+    "@next/eslint-plugin-next": "13.5.1",
+    "eslint-config-next": "13.5.1"
   }
 }
