--- a/package.json
+++ b/package.json
@@ -1,23 +1,34 @@
-"dependencies": {
-  "next": "13.5.1",
-  "react": "18.2.0",
-  "react-dom": "18.2.0",
-  "@tanstack/react-query": "^5.81.5",
-  "ethers": "^6.8.0",
-  "@farcaster/miniapp-sdk": "^0.1.8",
-  "wagmi": "^2.16.3",
-  "viem": "^2.31.6",
-  "@coinbase/onchainkit": "latest",
-  "i18next": "^23.1.2",
-  "react-i18next": "^12.3.1"
-},
-"devDependencies": {
-  "@types/react-i18next": "^11.18.6",
-  "typescript": "^5.2.2",
-  "@types/react": "^18.2.0",
-  "@types/react-dom": "^18.2.0",
-  "@types/node": "^20",
-  "eslint": "^9",
-  "@next/eslint-plugin-next": "13.5.1",
-  "eslint-config-next": "13.5.1"
+{
+  "name": "fortunecast",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "npm install --legacy-peer-deps && next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "next": "13.5.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "@tanstack/react-query": "^5.81.5",
+    "ethers": "^6.8.0",
+    "@farcaster/miniapp-sdk": "^0.1.8",
+    "wagmi": "^2.16.3",
+    "viem": "^2.31.6",
+    "@coinbase/onchainkit": "latest",
+    "i18next": "^23.1.2",
+    "react-i18next": "^12.3.1"
+  },
+  "devDependencies": {
+    "@types/react-i18next": "^11.18.6",
+    "typescript": "^5.2.2",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "@types/node": "^20",
+    "eslint": "^9",
+    "@next/eslint-plugin-next": "13.5.1",
+    "eslint-config-next": "13.5.1"
+  }
 }
