--- a/package.json
+++ b/package.json
@@ -12,19 +12,23 @@
     "next": "13.5.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "^5.2.2",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
     "@tanstack/react-query": "^5.81.5",
     "ethers": "^6.8.0",
     "@farcaster/miniapp-sdk": "^0.1.8",
     "wagmi": "^2.16.3",
     "viem": "^2.31.6",
-    "@coinbase/onchainkit": "latest"
+    "@coinbase/onchainkit": "1.0.0", 
+    "react-i18next": "^12.2.0", 
+    "i18next": "^23.0.1"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "13.5.1",
+    "typescript": "^5.2.2",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "@types/node": "^20",
+    "@types/react-i18next": "^12.1.4",
     "eslint": "^9",
+    "@next/eslint-plugin-next": "13.5.1",
     "eslint-config-next": "13.5.1"
   }
 }
